<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="#E4D0D0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card1"
            android:textSize="12sp"
            android:textColor="#666666"/>

        <EditText
            android:id="@+id/etQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/FlashcardFront"
            android:textSize="16sp"
            android:background="@null"
            android:paddingVertical="8dp"
            android:inputType="text"
            android:importantForAutofill="no" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A89292"
            android:layout_marginVertical="8dp" />

        <EditText
            android:id="@+id/etAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/flashcardBack"
            android:textSize="16sp"
            android:background="@null"
            android:paddingVertical="8dp"
            android:inputType="text"
            android:importantForAutofill="no" />
    </LinearLayout>
</androidx.cardview.widget.CardView>